# rust-mouse

./: .gitignore  Cargo.toml  pyproject.toml
.github/workflows/: pypi.yml
src/: lib.rs
